--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/uuid": "^10.0.0",
     "firebase": "^10.7.1",
     "firebase-admin": "^13.5.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.294.0",
     "nanoid": "^5.1.6",
     "react": "^18.2.0",
