--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sweetalert2": "^11.26.17",
     "tailwindcss-rtl": "^0.9.0",
     "uuid": "^13.0.0",
+    "zod": "^4.3.4",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
