--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "vercel:dev": "vercel dev --listen 3000",
+    "smoke:local": "pwsh -File scripts/smoke-test.ps1 -BaseUrl http://localhost:3000",
+    "smoke:prod": "pwsh -File scripts/smoke-test.ps1 -BaseUrl http://localhost:3000 -ProdUrl $env:PROD_URL"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
