Enhance API functionality and improve deployment documentation
- Updated API handlers to support HEAD requests, allowing for efficient health checks and caching.
- Improved error handling in the quote and history endpoints to return appropriate status codes and messages.
- Added new npm scripts for smoke testing in both PowerShell and Bash environments.
- Enhanced deployment documentation to clarify local and production testing procedures, including API endpoint checks.
- Refactored currency conversion logic for better accuracy and consistency across the application.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "vercel:dev": "vercel dev --listen 3000",
     "smoke:local": "pwsh -File scripts/smoke-test.ps1 -BaseUrl http://localhost:3000",
-    "smoke:prod": "pwsh -File scripts/smoke-test.ps1 -BaseUrl http://localhost:3000 -ProdUrl $env:PROD_URL"
+    "smoke:prod": "pwsh -File scripts/smoke-test.ps1 -BaseUrl http://localhost:3000 -ProdUrl $env:PROD_URL",
+    "smoke:local:bash": "bash scripts/smoke-test.sh http://localhost:3000",
+    "smoke:prod:bash": "bash scripts/smoke-test.sh"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
