--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@tiptap/react": "^3.7.2",
     "@tiptap/starter-kit": "^3.7.2",
     "@types/uuid": "^10.0.0",
+    "add": "^2.0.6",
     "firebase": "^10.7.1",
     "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.26",
+    "global": "^4.4.0",
     "lucide-react": "^0.294.0",
     "nanoid": "^5.1.6",
     "react": "^18.2.0",
@@ -41,6 +43,7 @@
     "sweetalert2": "^11.26.17",
     "tailwindcss-rtl": "^0.9.0",
     "uuid": "^13.0.0",
+    "vercel": "^50.4.9",
     "zod": "^4.3.4",
     "zustand": "^5.0.8"
   },
