--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,14 +7,22 @@
     "theme_color": "#000000",
     "icons": [
         {
-            "src": "/vite.svg",
-            "sizes": "192x192",
-            "type": "image/svg+xml"
+            "src": "/icon.svg",
+            "sizes": "192x192 512x512",
+            "type": "image/svg+xml",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/icon.svg",
+            "sizes": "512x512",
+            "type": "image/svg+xml",
+            "purpose": "any maskable"
         },
         {
             "src": "/vite.svg",
-            "sizes": "512x512",
-            "type": "image/svg+xml"
+            "sizes": "192x192 512x512",
+            "type": "image/svg+xml",
+            "purpose": "any maskable"
         }
     ]
 }
